# mq-plugins

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/calculation/: CMakeLists.txt
plugins/: CMakeLists.txt
plugins/em_mq_controller/: CMakeLists.txt  em_mq_controller.cpp  em_mq_controller.h  em_mq_controller.json
plugins/qt_mq_controller/: CMakeLists.txt  qt_mq_controller.cpp  qt_mq_controller.h
plugins/ui_controller/: CMakeLists.txt  ui_controller.cpp  ui_controller.h  ui_controller.json
plugins/ui_controller/qml/: main.qml
src/: CMakeLists.txt  base_mq_interface.cpp  base_mq_interface.h  base_ui_interface.cpp  base_ui_interface.h  main.cpp  system_manager.cpp  system_manager.h  system_manager_ui_interface.cpp  system_manager_ui_interface.h
test/: CMakeLists.txt
test/test_calculation/: CMakeLists.txt  tst_calculation.cpp
